// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewReaction should render ReviewReaction type D like correctly when defaultPressed=false  1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "unit": "px",
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
      },
      "components": Object {
        "MuiChip": Object {
          "styleOverrides": Object {
            "avatar": Object {
              "fontSize": "0.421875rem",
              "height": "12px",
              "width": "12px",
            },
            "deleteIcon": Object {
              "fontSize": "12px",
            },
            "icon": Object {
              "fontSize": "12px",
            },
            "label": Object {
              "@media (max-width:959.95px)": Object {},
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "inherit",
              "fontWeight": 400,
              "letterSpacing": 0.4,
              "lineHeight": "normal",
              "textTransform": "uppercase",
            },
            "sizeMedium": Object {
              "fontSize": 12,
              "height": "24px",
            },
            "sizeSmall": Object {
              "height": "16px",
            },
          },
        },
        "MuiInputBase": Object {
          "defaultProps": Object {
            "size": "small",
          },
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiInputLabel": Object {
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiLink": Object {
          "defaultProps": Object {
            "underline": "hover",
          },
        },
        "MuiMenuItem": Object {
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiSelect": Object {
          "styleOverrides": Object {
            "root": Object {
              "lineHeight": "normal",
            },
          },
        },
        "MuiTextField": Object {
          "defaultProps": Object {
            "size": "small",
          },
        },
      },
      "direction": "ltr",
      "mixins": Object {
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "palette": Object {
        "action": Object {
          "activatedOpacity": 0.12,
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "disabledOpacity": 0.38,
          "focus": "rgba(0, 0, 0, 0.12)",
          "focusOpacity": 0.12,
          "hover": "rgba(0, 0, 0, 0.04)",
          "hoverOpacity": 0.04,
          "selected": "rgba(0, 0, 0, 0.08)",
          "selectedOpacity": 0.08,
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fff",
          "paper": "#fff",
        },
        "blueFilled": Object {
          "contrastText": "#0C5A93",
          "dark": "#DAEFFE",
          "main": "#DAEFFE",
        },
        "blueOutlined": Object {
          "contrastText": "#DAEFFE",
          "dark": "#DAEFFE",
          "main": "#0C5A93",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "deepGrayFilled": Object {
          "contrastText": "#2A2D48",
          "dark": "#E3E5F8",
          "main": "#E3E5F8",
        },
        "deepGrayOutlined": Object {
          "contrastText": "#E3E5F8",
          "dark": "#E3E5F8",
          "main": "#2A2D48",
        },
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#B10C0C",
          "light": "#B10C0C",
          "main": "#B10C0C",
        },
        "getContrastText": [Function],
        "greenFilled": Object {
          "contrastText": "#4B991C",
          "dark": "#D1FEB6",
          "main": "#D1FEB6",
        },
        "greenOutlined": Object {
          "contrastText": "#D1FEB6",
          "dark": "#D1FEB6",
          "main": "#4B991C",
        },
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#f5f5f5",
          "A200": "#eeeeee",
          "A400": "#bdbdbd",
          "A700": "#616161",
        },
        "highlight": Object {
          "blue": Object {
            "300": "#DAEFFE",
            "500": "#35A1EF",
            "700": "#0C5A93",
          },
          "deepGray": Object {
            "300": "#E3E5F8",
            "500": "#7C7F9B",
            "700": "#2A2D48",
          },
          "green": Object {
            "300": "#D1FEB6",
            "500": "#85E14D",
            "700": "#4B991C",
          },
          "orange": Object {
            "300": "#FEE5CD",
            "500": "#FEA339",
            "700": "#D67F19",
          },
          "pink": Object {
            "300": "#FDD8EE",
            "500": "#F339A8",
            "700": "#C7117F",
          },
          "purple": Object {
            "300": "#F3D6FD",
            "500": "#BF35EF",
            "700": "#681A83",
          },
          "red": Object {
            "300": "#FDDBDB",
            "500": "#F96666",
            "700": "#B10C0C",
          },
          "yellow": Object {
            "300": "#FFF2C4",
            "500": "#FED239",
            "700": "#EB9C03",
          },
        },
        "info": Object {
          "contrastText": "#fff",
          "dark": "#01579b",
          "light": "#03a9f4",
          "main": "#0288d1",
        },
        "mode": "light",
        "orangeFilled": Object {
          "contrastText": "#D67F19",
          "dark": "#FEE5CD",
          "main": "#FEE5CD",
        },
        "orangeOutlined": Object {
          "contrastText": "#FEE5CD",
          "dark": "#FEE5CD",
          "main": "#D67F19",
        },
        "pinkFilled": Object {
          "contrastText": "#C7117F",
          "dark": "#FDD8EE",
          "main": "#FDD8EE",
        },
        "pinkOutlined": Object {
          "contrastText": "#FDD8EE",
          "dark": "#FDD8EE",
          "main": "#C7117F",
        },
        "primary": Object {
          "contrastText": "#FAFAFF",
          "dark": "#0C0E1D",
          "light": "#E3E5F8",
          "main": "#2A2D48",
        },
        "primaryRange": Object {
          "10": "#FAFAFF",
          "100": "#9C9FBA",
          "200": "#7C7F9B",
          "30": "#E3E5F8",
          "300": "#555872",
          "400": "#393C55",
          "50": "#C9CCE4",
          "500": "#2A2D48",
          "600": "#191D36",
          "700": "#0C0E1D",
          "800": "#050611",
          "900": "#02030A",
        },
        "purpleFilled": Object {
          "contrastText": "#681A83",
          "dark": "#F3D6FD",
          "main": "#F3D6FD",
        },
        "purpleOutlined": Object {
          "contrastText": "#F3D6FD",
          "dark": "#F3D6FD",
          "main": "#681A83",
        },
        "redFilled": Object {
          "contrastText": "#B10C0C",
          "dark": "#FDDBDB",
          "main": "#FDDBDB",
        },
        "redOutlined": Object {
          "contrastText": "#FDDBDB",
          "dark": "#FDDBDB",
          "main": "#B10C0C",
        },
        "secondary": Object {
          "contrastText": "#2A2D48",
          "dark": "#FCDF7D",
          "light": "#E3E5F8",
          "main": "#FED239",
        },
        "secondaryRange": Object {
          "100": "#FFF2C4",
          "200": "#FFE99C",
          "300": "#FCDF7D",
          "400": "#FED957",
          "50": "#FFFAE7",
          "500": "#FED239",
          "600": "#FEC614",
          "700": "#FDBC06",
          "800": "#F8AA14",
          "900": "#EB9C03",
        },
        "success": Object {
          "contrastText": "#fff",
          "dark": "#1b5e20",
          "light": "#4caf50",
          "main": "#2e7d32",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "primary": "#2A2D48",
          "secondary": "rgba(0, 0, 0, 0.6)",
        },
        "tonalOffset": 0.2,
        "warning": Object {
          "contrastText": "#fff",
          "dark": "#e65100",
          "light": "#ff9800",
          "main": "#ed6c02",
        },
        "white": "#FFFFFF",
        "yellowFilled": Object {
          "contrastText": "#EB9C03",
          "dark": "#FFF2C4",
          "main": "#FFF2C4",
        },
        "yellowOutlined": Object {
          "contrastText": "#FFF2C4",
          "dark": "#FFF2C4",
          "main": "#EB9C03",
        },
      },
      "shadows": Array [
        "none",
        "0px 2px 1px -1px rgba(0,0,0,0.12),0px 1px 1px 0px rgba(0,0,0,0.12),0px 1px 3px 0px rgba(0,0,0,0.12)",
        "0px 3px 1px -2px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.12),0px 1px 5px 0px rgba(0,0,0,0.12)",
        "0px 3px 3px -2px rgba(0,0,0,0.12),0px 3px 4px 0px rgba(0,0,0,0.12),0px 1px 8px 0px rgba(0,0,0,0.12)",
        "0px 2px 4px -1px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.12),0px 1px 10px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.12),0px 5px 8px 0px rgba(0,0,0,0.12),0px 1px 14px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.12),0px 6px 10px 0px rgba(0,0,0,0.12),0px 1px 18px 0px rgba(0,0,0,0.12)",
        "0px 4px 5px -2px rgba(0,0,0,0.12),0px 7px 10px 1px rgba(0,0,0,0.12),0px 2px 16px 1px rgba(0,0,0,0.12)",
        "0px 5px 5px -3px rgba(0,0,0,0.12),0px 8px 10px 1px rgba(0,0,0,0.12),0px 3px 14px 2px rgba(0,0,0,0.12)",
        "0px 5px 6px -3px rgba(0,0,0,0.12),0px 9px 12px 1px rgba(0,0,0,0.12),0px 3px 16px 2px rgba(0,0,0,0.12)",
        "0px 6px 6px -3px rgba(0,0,0,0.12),0px 10px 14px 1px rgba(0,0,0,0.12),0px 4px 18px 3px rgba(0,0,0,0.12)",
        "0px 6px 7px -4px rgba(0,0,0,0.12),0px 11px 15px 1px rgba(0,0,0,0.12),0px 4px 20px 3px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.12),0px 12px 17px 2px rgba(0,0,0,0.12),0px 5px 22px 4px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.12),0px 13px 19px 2px rgba(0,0,0,0.12),0px 5px 24px 4px rgba(0,0,0,0.12)",
        "0px 7px 9px -4px rgba(0,0,0,0.12),0px 14px 21px 2px rgba(0,0,0,0.12),0px 5px 26px 4px rgba(0,0,0,0.12)",
        "0px 8px 9px -5px rgba(0,0,0,0.12),0px 15px 22px 2px rgba(0,0,0,0.12),0px 6px 28px 5px rgba(0,0,0,0.12)",
        "0px 8px 10px -5px rgba(0,0,0,0.12),0px 16px 24px 2px rgba(0,0,0,0.12),0px 6px 30px 5px rgba(0,0,0,0.12)",
        "0px 8px 11px -5px rgba(0,0,0,0.12),0px 17px 26px 2px rgba(0,0,0,0.12),0px 6px 32px 5px rgba(0,0,0,0.12)",
        "0px 9px 11px -5px rgba(0,0,0,0.12),0px 18px 28px 2px rgba(0,0,0,0.12),0px 7px 34px 6px rgba(0,0,0,0.12)",
        "0px 9px 12px -6px rgba(0,0,0,0.12),0px 19px 29px 2px rgba(0,0,0,0.12),0px 7px 36px 6px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.12),0px 20px 31px 3px rgba(0,0,0,0.12),0px 8px 38px 7px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.12),0px 21px 33px 3px rgba(0,0,0,0.12),0px 8px 40px 7px rgba(0,0,0,0.12)",
        "0px 10px 14px -6px rgba(0,0,0,0.12),0px 22px 35px 3px rgba(0,0,0,0.12),0px 8px 42px 7px rgba(0,0,0,0.12)",
        "0px 11px 14px -7px rgba(0,0,0,0.12),0px 23px 36px 3px rgba(0,0,0,0.12),0px 9px 44px 8px rgba(0,0,0,0.12)",
        "0px 11px 15px -7px rgba(0,0,0,0.12),0px 24px 38px 3px rgba(0,0,0,0.12),0px 9px 46px 8px rgba(0,0,0,0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": [Function],
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.40625rem",
          },
          "fontFamily": "ChulaCharasNew",
          "fontSize": "1.125rem",
          "fontWeight": 400,
          "letterSpacing": 0.5,
          "lineHeight": "1.6875rem",
        },
        "body2": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.40625rem",
          },
          "fontFamily": "ChulaCharasNew",
          "fontSize": "0.984375rem",
          "fontWeight": 400,
          "letterSpacing": 0.25,
          "lineHeight": "1.40625rem",
        },
        "button": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.703125rem",
            "lineHeight": "1.96875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.84375rem",
          "fontWeight": 400,
          "letterSpacing": 1.25,
          "lineHeight": "1.96875rem",
          "textTransform": "uppercase",
        },
        "caption": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.5625rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.703125rem",
          "fontWeight": 400,
          "letterSpacing": 0.4,
          "lineHeight": "1.125rem",
        },
        "fontFamily": "Poppins,Prompt,sans-serif",
        "fontSize": 14,
        "fontWeightBold": 700,
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "2.8125rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h2": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.96875rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h3": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.6875rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h4": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.40625rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "2.53125rem",
        },
        "h5": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.265625rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "1.6875rem",
        },
        "h6": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.984375rem",
          "fontWeight": 500,
          "letterSpacing": 0.15,
          "lineHeight": "1.6875rem",
        },
        "htmlFontSize": 14.222222222222221,
        "overline": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.5625rem",
          "fontWeight": 400,
          "letterSpacing": 0.4,
          "lineHeight": "1.125rem",
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "subtitle1": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.6875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.984375rem",
          "fontWeight": 400,
          "letterSpacing": 0.15,
          "lineHeight": "1.6875rem",
        },
        "subtitle2": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.6328125rem",
            "lineHeight": "1.6875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.84375rem",
          "fontWeight": 500,
          "letterSpacing": 0.1,
          "lineHeight": "1.6875rem",
        },
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "speedDial": 1050,
        "tooltip": 1500,
      },
    }
  }
>
  <InnerThemeProvider>
    <ReviewReaction
      pressed={false}
      reactionCount={42}
      type="D"
    />
  </InnerThemeProvider>
</ThemeProvider>
`;

exports[`ReviewReaction should render ReviewReaction type D like correctly when defaultPressed=true  1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "unit": "px",
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
      },
      "components": Object {
        "MuiChip": Object {
          "styleOverrides": Object {
            "avatar": Object {
              "fontSize": "0.421875rem",
              "height": "12px",
              "width": "12px",
            },
            "deleteIcon": Object {
              "fontSize": "12px",
            },
            "icon": Object {
              "fontSize": "12px",
            },
            "label": Object {
              "@media (max-width:959.95px)": Object {},
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "inherit",
              "fontWeight": 400,
              "letterSpacing": 0.4,
              "lineHeight": "normal",
              "textTransform": "uppercase",
            },
            "sizeMedium": Object {
              "fontSize": 12,
              "height": "24px",
            },
            "sizeSmall": Object {
              "height": "16px",
            },
          },
        },
        "MuiInputBase": Object {
          "defaultProps": Object {
            "size": "small",
          },
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiInputLabel": Object {
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiLink": Object {
          "defaultProps": Object {
            "underline": "hover",
          },
        },
        "MuiMenuItem": Object {
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiSelect": Object {
          "styleOverrides": Object {
            "root": Object {
              "lineHeight": "normal",
            },
          },
        },
        "MuiTextField": Object {
          "defaultProps": Object {
            "size": "small",
          },
        },
      },
      "direction": "ltr",
      "mixins": Object {
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "palette": Object {
        "action": Object {
          "activatedOpacity": 0.12,
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "disabledOpacity": 0.38,
          "focus": "rgba(0, 0, 0, 0.12)",
          "focusOpacity": 0.12,
          "hover": "rgba(0, 0, 0, 0.04)",
          "hoverOpacity": 0.04,
          "selected": "rgba(0, 0, 0, 0.08)",
          "selectedOpacity": 0.08,
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fff",
          "paper": "#fff",
        },
        "blueFilled": Object {
          "contrastText": "#0C5A93",
          "dark": "#DAEFFE",
          "main": "#DAEFFE",
        },
        "blueOutlined": Object {
          "contrastText": "#DAEFFE",
          "dark": "#DAEFFE",
          "main": "#0C5A93",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "deepGrayFilled": Object {
          "contrastText": "#2A2D48",
          "dark": "#E3E5F8",
          "main": "#E3E5F8",
        },
        "deepGrayOutlined": Object {
          "contrastText": "#E3E5F8",
          "dark": "#E3E5F8",
          "main": "#2A2D48",
        },
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#B10C0C",
          "light": "#B10C0C",
          "main": "#B10C0C",
        },
        "getContrastText": [Function],
        "greenFilled": Object {
          "contrastText": "#4B991C",
          "dark": "#D1FEB6",
          "main": "#D1FEB6",
        },
        "greenOutlined": Object {
          "contrastText": "#D1FEB6",
          "dark": "#D1FEB6",
          "main": "#4B991C",
        },
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#f5f5f5",
          "A200": "#eeeeee",
          "A400": "#bdbdbd",
          "A700": "#616161",
        },
        "highlight": Object {
          "blue": Object {
            "300": "#DAEFFE",
            "500": "#35A1EF",
            "700": "#0C5A93",
          },
          "deepGray": Object {
            "300": "#E3E5F8",
            "500": "#7C7F9B",
            "700": "#2A2D48",
          },
          "green": Object {
            "300": "#D1FEB6",
            "500": "#85E14D",
            "700": "#4B991C",
          },
          "orange": Object {
            "300": "#FEE5CD",
            "500": "#FEA339",
            "700": "#D67F19",
          },
          "pink": Object {
            "300": "#FDD8EE",
            "500": "#F339A8",
            "700": "#C7117F",
          },
          "purple": Object {
            "300": "#F3D6FD",
            "500": "#BF35EF",
            "700": "#681A83",
          },
          "red": Object {
            "300": "#FDDBDB",
            "500": "#F96666",
            "700": "#B10C0C",
          },
          "yellow": Object {
            "300": "#FFF2C4",
            "500": "#FED239",
            "700": "#EB9C03",
          },
        },
        "info": Object {
          "contrastText": "#fff",
          "dark": "#01579b",
          "light": "#03a9f4",
          "main": "#0288d1",
        },
        "mode": "light",
        "orangeFilled": Object {
          "contrastText": "#D67F19",
          "dark": "#FEE5CD",
          "main": "#FEE5CD",
        },
        "orangeOutlined": Object {
          "contrastText": "#FEE5CD",
          "dark": "#FEE5CD",
          "main": "#D67F19",
        },
        "pinkFilled": Object {
          "contrastText": "#C7117F",
          "dark": "#FDD8EE",
          "main": "#FDD8EE",
        },
        "pinkOutlined": Object {
          "contrastText": "#FDD8EE",
          "dark": "#FDD8EE",
          "main": "#C7117F",
        },
        "primary": Object {
          "contrastText": "#FAFAFF",
          "dark": "#0C0E1D",
          "light": "#E3E5F8",
          "main": "#2A2D48",
        },
        "primaryRange": Object {
          "10": "#FAFAFF",
          "100": "#9C9FBA",
          "200": "#7C7F9B",
          "30": "#E3E5F8",
          "300": "#555872",
          "400": "#393C55",
          "50": "#C9CCE4",
          "500": "#2A2D48",
          "600": "#191D36",
          "700": "#0C0E1D",
          "800": "#050611",
          "900": "#02030A",
        },
        "purpleFilled": Object {
          "contrastText": "#681A83",
          "dark": "#F3D6FD",
          "main": "#F3D6FD",
        },
        "purpleOutlined": Object {
          "contrastText": "#F3D6FD",
          "dark": "#F3D6FD",
          "main": "#681A83",
        },
        "redFilled": Object {
          "contrastText": "#B10C0C",
          "dark": "#FDDBDB",
          "main": "#FDDBDB",
        },
        "redOutlined": Object {
          "contrastText": "#FDDBDB",
          "dark": "#FDDBDB",
          "main": "#B10C0C",
        },
        "secondary": Object {
          "contrastText": "#2A2D48",
          "dark": "#FCDF7D",
          "light": "#E3E5F8",
          "main": "#FED239",
        },
        "secondaryRange": Object {
          "100": "#FFF2C4",
          "200": "#FFE99C",
          "300": "#FCDF7D",
          "400": "#FED957",
          "50": "#FFFAE7",
          "500": "#FED239",
          "600": "#FEC614",
          "700": "#FDBC06",
          "800": "#F8AA14",
          "900": "#EB9C03",
        },
        "success": Object {
          "contrastText": "#fff",
          "dark": "#1b5e20",
          "light": "#4caf50",
          "main": "#2e7d32",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "primary": "#2A2D48",
          "secondary": "rgba(0, 0, 0, 0.6)",
        },
        "tonalOffset": 0.2,
        "warning": Object {
          "contrastText": "#fff",
          "dark": "#e65100",
          "light": "#ff9800",
          "main": "#ed6c02",
        },
        "white": "#FFFFFF",
        "yellowFilled": Object {
          "contrastText": "#EB9C03",
          "dark": "#FFF2C4",
          "main": "#FFF2C4",
        },
        "yellowOutlined": Object {
          "contrastText": "#FFF2C4",
          "dark": "#FFF2C4",
          "main": "#EB9C03",
        },
      },
      "shadows": Array [
        "none",
        "0px 2px 1px -1px rgba(0,0,0,0.12),0px 1px 1px 0px rgba(0,0,0,0.12),0px 1px 3px 0px rgba(0,0,0,0.12)",
        "0px 3px 1px -2px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.12),0px 1px 5px 0px rgba(0,0,0,0.12)",
        "0px 3px 3px -2px rgba(0,0,0,0.12),0px 3px 4px 0px rgba(0,0,0,0.12),0px 1px 8px 0px rgba(0,0,0,0.12)",
        "0px 2px 4px -1px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.12),0px 1px 10px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.12),0px 5px 8px 0px rgba(0,0,0,0.12),0px 1px 14px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.12),0px 6px 10px 0px rgba(0,0,0,0.12),0px 1px 18px 0px rgba(0,0,0,0.12)",
        "0px 4px 5px -2px rgba(0,0,0,0.12),0px 7px 10px 1px rgba(0,0,0,0.12),0px 2px 16px 1px rgba(0,0,0,0.12)",
        "0px 5px 5px -3px rgba(0,0,0,0.12),0px 8px 10px 1px rgba(0,0,0,0.12),0px 3px 14px 2px rgba(0,0,0,0.12)",
        "0px 5px 6px -3px rgba(0,0,0,0.12),0px 9px 12px 1px rgba(0,0,0,0.12),0px 3px 16px 2px rgba(0,0,0,0.12)",
        "0px 6px 6px -3px rgba(0,0,0,0.12),0px 10px 14px 1px rgba(0,0,0,0.12),0px 4px 18px 3px rgba(0,0,0,0.12)",
        "0px 6px 7px -4px rgba(0,0,0,0.12),0px 11px 15px 1px rgba(0,0,0,0.12),0px 4px 20px 3px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.12),0px 12px 17px 2px rgba(0,0,0,0.12),0px 5px 22px 4px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.12),0px 13px 19px 2px rgba(0,0,0,0.12),0px 5px 24px 4px rgba(0,0,0,0.12)",
        "0px 7px 9px -4px rgba(0,0,0,0.12),0px 14px 21px 2px rgba(0,0,0,0.12),0px 5px 26px 4px rgba(0,0,0,0.12)",
        "0px 8px 9px -5px rgba(0,0,0,0.12),0px 15px 22px 2px rgba(0,0,0,0.12),0px 6px 28px 5px rgba(0,0,0,0.12)",
        "0px 8px 10px -5px rgba(0,0,0,0.12),0px 16px 24px 2px rgba(0,0,0,0.12),0px 6px 30px 5px rgba(0,0,0,0.12)",
        "0px 8px 11px -5px rgba(0,0,0,0.12),0px 17px 26px 2px rgba(0,0,0,0.12),0px 6px 32px 5px rgba(0,0,0,0.12)",
        "0px 9px 11px -5px rgba(0,0,0,0.12),0px 18px 28px 2px rgba(0,0,0,0.12),0px 7px 34px 6px rgba(0,0,0,0.12)",
        "0px 9px 12px -6px rgba(0,0,0,0.12),0px 19px 29px 2px rgba(0,0,0,0.12),0px 7px 36px 6px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.12),0px 20px 31px 3px rgba(0,0,0,0.12),0px 8px 38px 7px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.12),0px 21px 33px 3px rgba(0,0,0,0.12),0px 8px 40px 7px rgba(0,0,0,0.12)",
        "0px 10px 14px -6px rgba(0,0,0,0.12),0px 22px 35px 3px rgba(0,0,0,0.12),0px 8px 42px 7px rgba(0,0,0,0.12)",
        "0px 11px 14px -7px rgba(0,0,0,0.12),0px 23px 36px 3px rgba(0,0,0,0.12),0px 9px 44px 8px rgba(0,0,0,0.12)",
        "0px 11px 15px -7px rgba(0,0,0,0.12),0px 24px 38px 3px rgba(0,0,0,0.12),0px 9px 46px 8px rgba(0,0,0,0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": [Function],
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.40625rem",
          },
          "fontFamily": "ChulaCharasNew",
          "fontSize": "1.125rem",
          "fontWeight": 400,
          "letterSpacing": 0.5,
          "lineHeight": "1.6875rem",
        },
        "body2": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.40625rem",
          },
          "fontFamily": "ChulaCharasNew",
          "fontSize": "0.984375rem",
          "fontWeight": 400,
          "letterSpacing": 0.25,
          "lineHeight": "1.40625rem",
        },
        "button": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.703125rem",
            "lineHeight": "1.96875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.84375rem",
          "fontWeight": 400,
          "letterSpacing": 1.25,
          "lineHeight": "1.96875rem",
          "textTransform": "uppercase",
        },
        "caption": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.5625rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.703125rem",
          "fontWeight": 400,
          "letterSpacing": 0.4,
          "lineHeight": "1.125rem",
        },
        "fontFamily": "Poppins,Prompt,sans-serif",
        "fontSize": 14,
        "fontWeightBold": 700,
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "2.8125rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h2": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.96875rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h3": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.6875rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h4": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.40625rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "2.53125rem",
        },
        "h5": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.265625rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "1.6875rem",
        },
        "h6": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.984375rem",
          "fontWeight": 500,
          "letterSpacing": 0.15,
          "lineHeight": "1.6875rem",
        },
        "htmlFontSize": 14.222222222222221,
        "overline": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.5625rem",
          "fontWeight": 400,
          "letterSpacing": 0.4,
          "lineHeight": "1.125rem",
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "subtitle1": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.6875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.984375rem",
          "fontWeight": 400,
          "letterSpacing": 0.15,
          "lineHeight": "1.6875rem",
        },
        "subtitle2": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.6328125rem",
            "lineHeight": "1.6875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.84375rem",
          "fontWeight": 500,
          "letterSpacing": 0.1,
          "lineHeight": "1.6875rem",
        },
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "speedDial": 1050,
        "tooltip": 1500,
      },
    }
  }
>
  <InnerThemeProvider>
    <ReviewReaction
      pressed={true}
      reactionCount={42}
      type="D"
    />
  </InnerThemeProvider>
</ThemeProvider>
`;

exports[`ReviewReaction should render ReviewReaction type L like correctly when defaultPressed=false  1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "unit": "px",
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
      },
      "components": Object {
        "MuiChip": Object {
          "styleOverrides": Object {
            "avatar": Object {
              "fontSize": "0.421875rem",
              "height": "12px",
              "width": "12px",
            },
            "deleteIcon": Object {
              "fontSize": "12px",
            },
            "icon": Object {
              "fontSize": "12px",
            },
            "label": Object {
              "@media (max-width:959.95px)": Object {},
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "inherit",
              "fontWeight": 400,
              "letterSpacing": 0.4,
              "lineHeight": "normal",
              "textTransform": "uppercase",
            },
            "sizeMedium": Object {
              "fontSize": 12,
              "height": "24px",
            },
            "sizeSmall": Object {
              "height": "16px",
            },
          },
        },
        "MuiInputBase": Object {
          "defaultProps": Object {
            "size": "small",
          },
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiInputLabel": Object {
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiLink": Object {
          "defaultProps": Object {
            "underline": "hover",
          },
        },
        "MuiMenuItem": Object {
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiSelect": Object {
          "styleOverrides": Object {
            "root": Object {
              "lineHeight": "normal",
            },
          },
        },
        "MuiTextField": Object {
          "defaultProps": Object {
            "size": "small",
          },
        },
      },
      "direction": "ltr",
      "mixins": Object {
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "palette": Object {
        "action": Object {
          "activatedOpacity": 0.12,
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "disabledOpacity": 0.38,
          "focus": "rgba(0, 0, 0, 0.12)",
          "focusOpacity": 0.12,
          "hover": "rgba(0, 0, 0, 0.04)",
          "hoverOpacity": 0.04,
          "selected": "rgba(0, 0, 0, 0.08)",
          "selectedOpacity": 0.08,
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fff",
          "paper": "#fff",
        },
        "blueFilled": Object {
          "contrastText": "#0C5A93",
          "dark": "#DAEFFE",
          "main": "#DAEFFE",
        },
        "blueOutlined": Object {
          "contrastText": "#DAEFFE",
          "dark": "#DAEFFE",
          "main": "#0C5A93",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "deepGrayFilled": Object {
          "contrastText": "#2A2D48",
          "dark": "#E3E5F8",
          "main": "#E3E5F8",
        },
        "deepGrayOutlined": Object {
          "contrastText": "#E3E5F8",
          "dark": "#E3E5F8",
          "main": "#2A2D48",
        },
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#B10C0C",
          "light": "#B10C0C",
          "main": "#B10C0C",
        },
        "getContrastText": [Function],
        "greenFilled": Object {
          "contrastText": "#4B991C",
          "dark": "#D1FEB6",
          "main": "#D1FEB6",
        },
        "greenOutlined": Object {
          "contrastText": "#D1FEB6",
          "dark": "#D1FEB6",
          "main": "#4B991C",
        },
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#f5f5f5",
          "A200": "#eeeeee",
          "A400": "#bdbdbd",
          "A700": "#616161",
        },
        "highlight": Object {
          "blue": Object {
            "300": "#DAEFFE",
            "500": "#35A1EF",
            "700": "#0C5A93",
          },
          "deepGray": Object {
            "300": "#E3E5F8",
            "500": "#7C7F9B",
            "700": "#2A2D48",
          },
          "green": Object {
            "300": "#D1FEB6",
            "500": "#85E14D",
            "700": "#4B991C",
          },
          "orange": Object {
            "300": "#FEE5CD",
            "500": "#FEA339",
            "700": "#D67F19",
          },
          "pink": Object {
            "300": "#FDD8EE",
            "500": "#F339A8",
            "700": "#C7117F",
          },
          "purple": Object {
            "300": "#F3D6FD",
            "500": "#BF35EF",
            "700": "#681A83",
          },
          "red": Object {
            "300": "#FDDBDB",
            "500": "#F96666",
            "700": "#B10C0C",
          },
          "yellow": Object {
            "300": "#FFF2C4",
            "500": "#FED239",
            "700": "#EB9C03",
          },
        },
        "info": Object {
          "contrastText": "#fff",
          "dark": "#01579b",
          "light": "#03a9f4",
          "main": "#0288d1",
        },
        "mode": "light",
        "orangeFilled": Object {
          "contrastText": "#D67F19",
          "dark": "#FEE5CD",
          "main": "#FEE5CD",
        },
        "orangeOutlined": Object {
          "contrastText": "#FEE5CD",
          "dark": "#FEE5CD",
          "main": "#D67F19",
        },
        "pinkFilled": Object {
          "contrastText": "#C7117F",
          "dark": "#FDD8EE",
          "main": "#FDD8EE",
        },
        "pinkOutlined": Object {
          "contrastText": "#FDD8EE",
          "dark": "#FDD8EE",
          "main": "#C7117F",
        },
        "primary": Object {
          "contrastText": "#FAFAFF",
          "dark": "#0C0E1D",
          "light": "#E3E5F8",
          "main": "#2A2D48",
        },
        "primaryRange": Object {
          "10": "#FAFAFF",
          "100": "#9C9FBA",
          "200": "#7C7F9B",
          "30": "#E3E5F8",
          "300": "#555872",
          "400": "#393C55",
          "50": "#C9CCE4",
          "500": "#2A2D48",
          "600": "#191D36",
          "700": "#0C0E1D",
          "800": "#050611",
          "900": "#02030A",
        },
        "purpleFilled": Object {
          "contrastText": "#681A83",
          "dark": "#F3D6FD",
          "main": "#F3D6FD",
        },
        "purpleOutlined": Object {
          "contrastText": "#F3D6FD",
          "dark": "#F3D6FD",
          "main": "#681A83",
        },
        "redFilled": Object {
          "contrastText": "#B10C0C",
          "dark": "#FDDBDB",
          "main": "#FDDBDB",
        },
        "redOutlined": Object {
          "contrastText": "#FDDBDB",
          "dark": "#FDDBDB",
          "main": "#B10C0C",
        },
        "secondary": Object {
          "contrastText": "#2A2D48",
          "dark": "#FCDF7D",
          "light": "#E3E5F8",
          "main": "#FED239",
        },
        "secondaryRange": Object {
          "100": "#FFF2C4",
          "200": "#FFE99C",
          "300": "#FCDF7D",
          "400": "#FED957",
          "50": "#FFFAE7",
          "500": "#FED239",
          "600": "#FEC614",
          "700": "#FDBC06",
          "800": "#F8AA14",
          "900": "#EB9C03",
        },
        "success": Object {
          "contrastText": "#fff",
          "dark": "#1b5e20",
          "light": "#4caf50",
          "main": "#2e7d32",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "primary": "#2A2D48",
          "secondary": "rgba(0, 0, 0, 0.6)",
        },
        "tonalOffset": 0.2,
        "warning": Object {
          "contrastText": "#fff",
          "dark": "#e65100",
          "light": "#ff9800",
          "main": "#ed6c02",
        },
        "white": "#FFFFFF",
        "yellowFilled": Object {
          "contrastText": "#EB9C03",
          "dark": "#FFF2C4",
          "main": "#FFF2C4",
        },
        "yellowOutlined": Object {
          "contrastText": "#FFF2C4",
          "dark": "#FFF2C4",
          "main": "#EB9C03",
        },
      },
      "shadows": Array [
        "none",
        "0px 2px 1px -1px rgba(0,0,0,0.12),0px 1px 1px 0px rgba(0,0,0,0.12),0px 1px 3px 0px rgba(0,0,0,0.12)",
        "0px 3px 1px -2px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.12),0px 1px 5px 0px rgba(0,0,0,0.12)",
        "0px 3px 3px -2px rgba(0,0,0,0.12),0px 3px 4px 0px rgba(0,0,0,0.12),0px 1px 8px 0px rgba(0,0,0,0.12)",
        "0px 2px 4px -1px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.12),0px 1px 10px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.12),0px 5px 8px 0px rgba(0,0,0,0.12),0px 1px 14px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.12),0px 6px 10px 0px rgba(0,0,0,0.12),0px 1px 18px 0px rgba(0,0,0,0.12)",
        "0px 4px 5px -2px rgba(0,0,0,0.12),0px 7px 10px 1px rgba(0,0,0,0.12),0px 2px 16px 1px rgba(0,0,0,0.12)",
        "0px 5px 5px -3px rgba(0,0,0,0.12),0px 8px 10px 1px rgba(0,0,0,0.12),0px 3px 14px 2px rgba(0,0,0,0.12)",
        "0px 5px 6px -3px rgba(0,0,0,0.12),0px 9px 12px 1px rgba(0,0,0,0.12),0px 3px 16px 2px rgba(0,0,0,0.12)",
        "0px 6px 6px -3px rgba(0,0,0,0.12),0px 10px 14px 1px rgba(0,0,0,0.12),0px 4px 18px 3px rgba(0,0,0,0.12)",
        "0px 6px 7px -4px rgba(0,0,0,0.12),0px 11px 15px 1px rgba(0,0,0,0.12),0px 4px 20px 3px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.12),0px 12px 17px 2px rgba(0,0,0,0.12),0px 5px 22px 4px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.12),0px 13px 19px 2px rgba(0,0,0,0.12),0px 5px 24px 4px rgba(0,0,0,0.12)",
        "0px 7px 9px -4px rgba(0,0,0,0.12),0px 14px 21px 2px rgba(0,0,0,0.12),0px 5px 26px 4px rgba(0,0,0,0.12)",
        "0px 8px 9px -5px rgba(0,0,0,0.12),0px 15px 22px 2px rgba(0,0,0,0.12),0px 6px 28px 5px rgba(0,0,0,0.12)",
        "0px 8px 10px -5px rgba(0,0,0,0.12),0px 16px 24px 2px rgba(0,0,0,0.12),0px 6px 30px 5px rgba(0,0,0,0.12)",
        "0px 8px 11px -5px rgba(0,0,0,0.12),0px 17px 26px 2px rgba(0,0,0,0.12),0px 6px 32px 5px rgba(0,0,0,0.12)",
        "0px 9px 11px -5px rgba(0,0,0,0.12),0px 18px 28px 2px rgba(0,0,0,0.12),0px 7px 34px 6px rgba(0,0,0,0.12)",
        "0px 9px 12px -6px rgba(0,0,0,0.12),0px 19px 29px 2px rgba(0,0,0,0.12),0px 7px 36px 6px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.12),0px 20px 31px 3px rgba(0,0,0,0.12),0px 8px 38px 7px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.12),0px 21px 33px 3px rgba(0,0,0,0.12),0px 8px 40px 7px rgba(0,0,0,0.12)",
        "0px 10px 14px -6px rgba(0,0,0,0.12),0px 22px 35px 3px rgba(0,0,0,0.12),0px 8px 42px 7px rgba(0,0,0,0.12)",
        "0px 11px 14px -7px rgba(0,0,0,0.12),0px 23px 36px 3px rgba(0,0,0,0.12),0px 9px 44px 8px rgba(0,0,0,0.12)",
        "0px 11px 15px -7px rgba(0,0,0,0.12),0px 24px 38px 3px rgba(0,0,0,0.12),0px 9px 46px 8px rgba(0,0,0,0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": [Function],
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.40625rem",
          },
          "fontFamily": "ChulaCharasNew",
          "fontSize": "1.125rem",
          "fontWeight": 400,
          "letterSpacing": 0.5,
          "lineHeight": "1.6875rem",
        },
        "body2": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.40625rem",
          },
          "fontFamily": "ChulaCharasNew",
          "fontSize": "0.984375rem",
          "fontWeight": 400,
          "letterSpacing": 0.25,
          "lineHeight": "1.40625rem",
        },
        "button": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.703125rem",
            "lineHeight": "1.96875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.84375rem",
          "fontWeight": 400,
          "letterSpacing": 1.25,
          "lineHeight": "1.96875rem",
          "textTransform": "uppercase",
        },
        "caption": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.5625rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.703125rem",
          "fontWeight": 400,
          "letterSpacing": 0.4,
          "lineHeight": "1.125rem",
        },
        "fontFamily": "Poppins,Prompt,sans-serif",
        "fontSize": 14,
        "fontWeightBold": 700,
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "2.8125rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h2": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.96875rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h3": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.6875rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h4": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.40625rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "2.53125rem",
        },
        "h5": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.265625rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "1.6875rem",
        },
        "h6": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.984375rem",
          "fontWeight": 500,
          "letterSpacing": 0.15,
          "lineHeight": "1.6875rem",
        },
        "htmlFontSize": 14.222222222222221,
        "overline": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.5625rem",
          "fontWeight": 400,
          "letterSpacing": 0.4,
          "lineHeight": "1.125rem",
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "subtitle1": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.6875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.984375rem",
          "fontWeight": 400,
          "letterSpacing": 0.15,
          "lineHeight": "1.6875rem",
        },
        "subtitle2": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.6328125rem",
            "lineHeight": "1.6875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.84375rem",
          "fontWeight": 500,
          "letterSpacing": 0.1,
          "lineHeight": "1.6875rem",
        },
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "speedDial": 1050,
        "tooltip": 1500,
      },
    }
  }
>
  <InnerThemeProvider>
    <ReviewReaction
      pressed={false}
      reactionCount={42}
      type="L"
    />
  </InnerThemeProvider>
</ThemeProvider>
`;

exports[`ReviewReaction should render ReviewReaction type L like correctly when defaultPressed=true  1`] = `
<ThemeProvider
  theme={
    Object {
      "breakpoints": Object {
        "between": [Function],
        "down": [Function],
        "keys": Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ],
        "only": [Function],
        "unit": "px",
        "up": [Function],
        "values": Object {
          "lg": 1280,
          "md": 960,
          "sm": 600,
          "xl": 1920,
          "xs": 0,
        },
      },
      "components": Object {
        "MuiChip": Object {
          "styleOverrides": Object {
            "avatar": Object {
              "fontSize": "0.421875rem",
              "height": "12px",
              "width": "12px",
            },
            "deleteIcon": Object {
              "fontSize": "12px",
            },
            "icon": Object {
              "fontSize": "12px",
            },
            "label": Object {
              "@media (max-width:959.95px)": Object {},
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "inherit",
              "fontWeight": 400,
              "letterSpacing": 0.4,
              "lineHeight": "normal",
              "textTransform": "uppercase",
            },
            "sizeMedium": Object {
              "fontSize": 12,
              "height": "24px",
            },
            "sizeSmall": Object {
              "height": "16px",
            },
          },
        },
        "MuiInputBase": Object {
          "defaultProps": Object {
            "size": "small",
          },
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiInputLabel": Object {
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiLink": Object {
          "defaultProps": Object {
            "underline": "hover",
          },
        },
        "MuiMenuItem": Object {
          "styleOverrides": Object {
            "root": Object {
              "@media (max-width:959.95px)": Object {
                "fontSize": "0.84375rem",
                "lineHeight": "1.6875rem",
              },
              "fontFamily": "Poppins,Prompt,sans-serif",
              "fontSize": "0.984375rem",
              "fontWeight": 400,
              "letterSpacing": 0.15,
              "lineHeight": "normal",
            },
          },
        },
        "MuiSelect": Object {
          "styleOverrides": Object {
            "root": Object {
              "lineHeight": "normal",
            },
          },
        },
        "MuiTextField": Object {
          "defaultProps": Object {
            "size": "small",
          },
        },
      },
      "direction": "ltr",
      "mixins": Object {
        "toolbar": Object {
          "@media (min-width:0px) and (orientation: landscape)": Object {
            "minHeight": 48,
          },
          "@media (min-width:600px)": Object {
            "minHeight": 64,
          },
          "minHeight": 56,
        },
      },
      "palette": Object {
        "action": Object {
          "activatedOpacity": 0.12,
          "active": "rgba(0, 0, 0, 0.54)",
          "disabled": "rgba(0, 0, 0, 0.26)",
          "disabledBackground": "rgba(0, 0, 0, 0.12)",
          "disabledOpacity": 0.38,
          "focus": "rgba(0, 0, 0, 0.12)",
          "focusOpacity": 0.12,
          "hover": "rgba(0, 0, 0, 0.04)",
          "hoverOpacity": 0.04,
          "selected": "rgba(0, 0, 0, 0.08)",
          "selectedOpacity": 0.08,
        },
        "augmentColor": [Function],
        "background": Object {
          "default": "#fff",
          "paper": "#fff",
        },
        "blueFilled": Object {
          "contrastText": "#0C5A93",
          "dark": "#DAEFFE",
          "main": "#DAEFFE",
        },
        "blueOutlined": Object {
          "contrastText": "#DAEFFE",
          "dark": "#DAEFFE",
          "main": "#0C5A93",
        },
        "common": Object {
          "black": "#000",
          "white": "#fff",
        },
        "contrastThreshold": 3,
        "deepGrayFilled": Object {
          "contrastText": "#2A2D48",
          "dark": "#E3E5F8",
          "main": "#E3E5F8",
        },
        "deepGrayOutlined": Object {
          "contrastText": "#E3E5F8",
          "dark": "#E3E5F8",
          "main": "#2A2D48",
        },
        "divider": "rgba(0, 0, 0, 0.12)",
        "error": Object {
          "contrastText": "#fff",
          "dark": "#B10C0C",
          "light": "#B10C0C",
          "main": "#B10C0C",
        },
        "getContrastText": [Function],
        "greenFilled": Object {
          "contrastText": "#4B991C",
          "dark": "#D1FEB6",
          "main": "#D1FEB6",
        },
        "greenOutlined": Object {
          "contrastText": "#D1FEB6",
          "dark": "#D1FEB6",
          "main": "#4B991C",
        },
        "grey": Object {
          "100": "#f5f5f5",
          "200": "#eeeeee",
          "300": "#e0e0e0",
          "400": "#bdbdbd",
          "50": "#fafafa",
          "500": "#9e9e9e",
          "600": "#757575",
          "700": "#616161",
          "800": "#424242",
          "900": "#212121",
          "A100": "#f5f5f5",
          "A200": "#eeeeee",
          "A400": "#bdbdbd",
          "A700": "#616161",
        },
        "highlight": Object {
          "blue": Object {
            "300": "#DAEFFE",
            "500": "#35A1EF",
            "700": "#0C5A93",
          },
          "deepGray": Object {
            "300": "#E3E5F8",
            "500": "#7C7F9B",
            "700": "#2A2D48",
          },
          "green": Object {
            "300": "#D1FEB6",
            "500": "#85E14D",
            "700": "#4B991C",
          },
          "orange": Object {
            "300": "#FEE5CD",
            "500": "#FEA339",
            "700": "#D67F19",
          },
          "pink": Object {
            "300": "#FDD8EE",
            "500": "#F339A8",
            "700": "#C7117F",
          },
          "purple": Object {
            "300": "#F3D6FD",
            "500": "#BF35EF",
            "700": "#681A83",
          },
          "red": Object {
            "300": "#FDDBDB",
            "500": "#F96666",
            "700": "#B10C0C",
          },
          "yellow": Object {
            "300": "#FFF2C4",
            "500": "#FED239",
            "700": "#EB9C03",
          },
        },
        "info": Object {
          "contrastText": "#fff",
          "dark": "#01579b",
          "light": "#03a9f4",
          "main": "#0288d1",
        },
        "mode": "light",
        "orangeFilled": Object {
          "contrastText": "#D67F19",
          "dark": "#FEE5CD",
          "main": "#FEE5CD",
        },
        "orangeOutlined": Object {
          "contrastText": "#FEE5CD",
          "dark": "#FEE5CD",
          "main": "#D67F19",
        },
        "pinkFilled": Object {
          "contrastText": "#C7117F",
          "dark": "#FDD8EE",
          "main": "#FDD8EE",
        },
        "pinkOutlined": Object {
          "contrastText": "#FDD8EE",
          "dark": "#FDD8EE",
          "main": "#C7117F",
        },
        "primary": Object {
          "contrastText": "#FAFAFF",
          "dark": "#0C0E1D",
          "light": "#E3E5F8",
          "main": "#2A2D48",
        },
        "primaryRange": Object {
          "10": "#FAFAFF",
          "100": "#9C9FBA",
          "200": "#7C7F9B",
          "30": "#E3E5F8",
          "300": "#555872",
          "400": "#393C55",
          "50": "#C9CCE4",
          "500": "#2A2D48",
          "600": "#191D36",
          "700": "#0C0E1D",
          "800": "#050611",
          "900": "#02030A",
        },
        "purpleFilled": Object {
          "contrastText": "#681A83",
          "dark": "#F3D6FD",
          "main": "#F3D6FD",
        },
        "purpleOutlined": Object {
          "contrastText": "#F3D6FD",
          "dark": "#F3D6FD",
          "main": "#681A83",
        },
        "redFilled": Object {
          "contrastText": "#B10C0C",
          "dark": "#FDDBDB",
          "main": "#FDDBDB",
        },
        "redOutlined": Object {
          "contrastText": "#FDDBDB",
          "dark": "#FDDBDB",
          "main": "#B10C0C",
        },
        "secondary": Object {
          "contrastText": "#2A2D48",
          "dark": "#FCDF7D",
          "light": "#E3E5F8",
          "main": "#FED239",
        },
        "secondaryRange": Object {
          "100": "#FFF2C4",
          "200": "#FFE99C",
          "300": "#FCDF7D",
          "400": "#FED957",
          "50": "#FFFAE7",
          "500": "#FED239",
          "600": "#FEC614",
          "700": "#FDBC06",
          "800": "#F8AA14",
          "900": "#EB9C03",
        },
        "success": Object {
          "contrastText": "#fff",
          "dark": "#1b5e20",
          "light": "#4caf50",
          "main": "#2e7d32",
        },
        "text": Object {
          "disabled": "rgba(0, 0, 0, 0.38)",
          "primary": "#2A2D48",
          "secondary": "rgba(0, 0, 0, 0.6)",
        },
        "tonalOffset": 0.2,
        "warning": Object {
          "contrastText": "#fff",
          "dark": "#e65100",
          "light": "#ff9800",
          "main": "#ed6c02",
        },
        "white": "#FFFFFF",
        "yellowFilled": Object {
          "contrastText": "#EB9C03",
          "dark": "#FFF2C4",
          "main": "#FFF2C4",
        },
        "yellowOutlined": Object {
          "contrastText": "#FFF2C4",
          "dark": "#FFF2C4",
          "main": "#EB9C03",
        },
      },
      "shadows": Array [
        "none",
        "0px 2px 1px -1px rgba(0,0,0,0.12),0px 1px 1px 0px rgba(0,0,0,0.12),0px 1px 3px 0px rgba(0,0,0,0.12)",
        "0px 3px 1px -2px rgba(0,0,0,0.12),0px 2px 2px 0px rgba(0,0,0,0.12),0px 1px 5px 0px rgba(0,0,0,0.12)",
        "0px 3px 3px -2px rgba(0,0,0,0.12),0px 3px 4px 0px rgba(0,0,0,0.12),0px 1px 8px 0px rgba(0,0,0,0.12)",
        "0px 2px 4px -1px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.12),0px 1px 10px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.12),0px 5px 8px 0px rgba(0,0,0,0.12),0px 1px 14px 0px rgba(0,0,0,0.12)",
        "0px 3px 5px -1px rgba(0,0,0,0.12),0px 6px 10px 0px rgba(0,0,0,0.12),0px 1px 18px 0px rgba(0,0,0,0.12)",
        "0px 4px 5px -2px rgba(0,0,0,0.12),0px 7px 10px 1px rgba(0,0,0,0.12),0px 2px 16px 1px rgba(0,0,0,0.12)",
        "0px 5px 5px -3px rgba(0,0,0,0.12),0px 8px 10px 1px rgba(0,0,0,0.12),0px 3px 14px 2px rgba(0,0,0,0.12)",
        "0px 5px 6px -3px rgba(0,0,0,0.12),0px 9px 12px 1px rgba(0,0,0,0.12),0px 3px 16px 2px rgba(0,0,0,0.12)",
        "0px 6px 6px -3px rgba(0,0,0,0.12),0px 10px 14px 1px rgba(0,0,0,0.12),0px 4px 18px 3px rgba(0,0,0,0.12)",
        "0px 6px 7px -4px rgba(0,0,0,0.12),0px 11px 15px 1px rgba(0,0,0,0.12),0px 4px 20px 3px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.12),0px 12px 17px 2px rgba(0,0,0,0.12),0px 5px 22px 4px rgba(0,0,0,0.12)",
        "0px 7px 8px -4px rgba(0,0,0,0.12),0px 13px 19px 2px rgba(0,0,0,0.12),0px 5px 24px 4px rgba(0,0,0,0.12)",
        "0px 7px 9px -4px rgba(0,0,0,0.12),0px 14px 21px 2px rgba(0,0,0,0.12),0px 5px 26px 4px rgba(0,0,0,0.12)",
        "0px 8px 9px -5px rgba(0,0,0,0.12),0px 15px 22px 2px rgba(0,0,0,0.12),0px 6px 28px 5px rgba(0,0,0,0.12)",
        "0px 8px 10px -5px rgba(0,0,0,0.12),0px 16px 24px 2px rgba(0,0,0,0.12),0px 6px 30px 5px rgba(0,0,0,0.12)",
        "0px 8px 11px -5px rgba(0,0,0,0.12),0px 17px 26px 2px rgba(0,0,0,0.12),0px 6px 32px 5px rgba(0,0,0,0.12)",
        "0px 9px 11px -5px rgba(0,0,0,0.12),0px 18px 28px 2px rgba(0,0,0,0.12),0px 7px 34px 6px rgba(0,0,0,0.12)",
        "0px 9px 12px -6px rgba(0,0,0,0.12),0px 19px 29px 2px rgba(0,0,0,0.12),0px 7px 36px 6px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.12),0px 20px 31px 3px rgba(0,0,0,0.12),0px 8px 38px 7px rgba(0,0,0,0.12)",
        "0px 10px 13px -6px rgba(0,0,0,0.12),0px 21px 33px 3px rgba(0,0,0,0.12),0px 8px 40px 7px rgba(0,0,0,0.12)",
        "0px 10px 14px -6px rgba(0,0,0,0.12),0px 22px 35px 3px rgba(0,0,0,0.12),0px 8px 42px 7px rgba(0,0,0,0.12)",
        "0px 11px 14px -7px rgba(0,0,0,0.12),0px 23px 36px 3px rgba(0,0,0,0.12),0px 9px 44px 8px rgba(0,0,0,0.12)",
        "0px 11px 15px -7px rgba(0,0,0,0.12),0px 24px 38px 3px rgba(0,0,0,0.12),0px 9px 46px 8px rgba(0,0,0,0.12)",
      ],
      "shape": Object {
        "borderRadius": 4,
      },
      "spacing": [Function],
      "transitions": Object {
        "create": [Function],
        "duration": Object {
          "complex": 375,
          "enteringScreen": 225,
          "leavingScreen": 195,
          "short": 250,
          "shorter": 200,
          "shortest": 150,
          "standard": 300,
        },
        "easing": Object {
          "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
          "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
          "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
          "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
        },
        "getAutoHeightDuration": [Function],
      },
      "typography": Object {
        "body1": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.40625rem",
          },
          "fontFamily": "ChulaCharasNew",
          "fontSize": "1.125rem",
          "fontWeight": 400,
          "letterSpacing": 0.5,
          "lineHeight": "1.6875rem",
        },
        "body2": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.40625rem",
          },
          "fontFamily": "ChulaCharasNew",
          "fontSize": "0.984375rem",
          "fontWeight": 400,
          "letterSpacing": 0.25,
          "lineHeight": "1.40625rem",
        },
        "button": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.703125rem",
            "lineHeight": "1.96875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.84375rem",
          "fontWeight": 400,
          "letterSpacing": 1.25,
          "lineHeight": "1.96875rem",
          "textTransform": "uppercase",
        },
        "caption": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.5625rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.703125rem",
          "fontWeight": 400,
          "letterSpacing": 0.4,
          "lineHeight": "1.125rem",
        },
        "fontFamily": "Poppins,Prompt,sans-serif",
        "fontSize": 14,
        "fontWeightBold": 700,
        "fontWeightLight": 300,
        "fontWeightMedium": 500,
        "fontWeightRegular": 400,
        "h1": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "2.8125rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h2": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.96875rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h3": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.6875rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "normal",
        },
        "h4": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.40625rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "2.53125rem",
        },
        "h5": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "1.265625rem",
          "fontWeight": 700,
          "letterSpacing": 0,
          "lineHeight": "1.6875rem",
        },
        "h6": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.984375rem",
          "fontWeight": 500,
          "letterSpacing": 0.15,
          "lineHeight": "1.6875rem",
        },
        "htmlFontSize": 14.222222222222221,
        "overline": Object {
          "@media (max-width:959.95px)": Object {},
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.5625rem",
          "fontWeight": 400,
          "letterSpacing": 0.4,
          "lineHeight": "1.125rem",
          "textTransform": "uppercase",
        },
        "pxToRem": [Function],
        "subtitle1": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.84375rem",
            "lineHeight": "1.6875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.984375rem",
          "fontWeight": 400,
          "letterSpacing": 0.15,
          "lineHeight": "1.6875rem",
        },
        "subtitle2": Object {
          "@media (max-width:959.95px)": Object {
            "fontSize": "0.6328125rem",
            "lineHeight": "1.6875rem",
          },
          "fontFamily": "Poppins,Prompt,sans-serif",
          "fontSize": "0.84375rem",
          "fontWeight": 500,
          "letterSpacing": 0.1,
          "lineHeight": "1.6875rem",
        },
      },
      "zIndex": Object {
        "appBar": 1100,
        "drawer": 1200,
        "mobileStepper": 1000,
        "modal": 1300,
        "snackbar": 1400,
        "speedDial": 1050,
        "tooltip": 1500,
      },
    }
  }
>
  <InnerThemeProvider>
    <ReviewReaction
      pressed={true}
      reactionCount={42}
      type="L"
    />
  </InnerThemeProvider>
</ThemeProvider>
`;
